change plot from matplotlib to mayavi

--- a/notebook/cascadedAStar.ipynb
+++ b/notebook/cascadedAStar.ipynb
@@ -71,10 +71,12 @@
     "\n",
     "fig = plt.figure(1)\n",
     "ax = fig.gca(projection='3d')\n",
+    "anyAStarGlobal.plotOptimalPath(ax)\n",
+    "anyAStarGlobal1.plotOptimalPath(ax)\n",
     "terrain.plotPlanes(ax)\n",
     "plt.rcParams[\"figure.figsize\"]=20,20\n",
-    "anyAStarGlobal.plotOptimalPath(ax)\n",
-    "anyAStarGlobal1.plotOptimalPath(ax)\n"
+    "\n",
+    "\n"
    ]
   },
   {
